fix text overflow in box

--- a/themes/tfsci/assets/main.scss
+++ b/themes/tfsci/assets/main.scss
@@ -87,6 +87,10 @@ main > .container {
     }
   }
 
+  .box {
+    word-wrap: break-word;
+  }
+
   li > ul:last-child,
   li > ol:last-child {
     margin-top: 0.25em;
